Tests/CompilerTests/negative/missing-associated-type-conformance.hylo
//! no-std

struct A { public memberwise init }
struct B { public memberwise init }
struct C { public memberwise init }

trait P {
  type X ; given X is P
  fun x() -> X
}

given A is P {
  type X = A
  public fun x() -> X { A() }
}

given B is P {
  type X = C
  public fun x() -> X { C() }
}

fun f<T where T is P>(t: T) {
  let x: T.X = t.x()
  f(x)
}
